# pam-typopw

./: .gitignore  .gitmodules  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  SETUP.md  a.c  a.py  a.spec  adaptypo  chk_pw.py  chkpw  chkpw.c  common_func.py  edits.py  fix_pw.c  fix_pw.h  install.sh  pam-typoauth  pam_opendirectory.c  pam_typopw.c  pam_typotolerant.py  pam_typotolerant.spec  pytest.ini  requirements.txt  send_typo_log.py  setting.py  setup.py  test_fix_pw  test_fix_pw.c  test_pam.py  test_typo_db_access.py  test_upload.py  tox.ini  typo_initiate.py  typtop  typtops.c  (+4 more)
Cexes/: 1234test_pwcache.py  adaptive_typocheck.py  chkpw_new.c  pam_typopw.py  pwcache.py  test.c  util.h
Cexes/tmp/: c_2_python.c
adaptive_typo/: __init__.py  adaptive_typocheck.py  dbutils.py  new_pwcache.py  password_based_public_cipher.py  pw2rsa.ipynb  pw_pkcrypto.py  pw_rsa.py  pwcache.py  pwcrypto.doc.md  pwcryptolib.py  send_typo_log.py  test_pw_pkcrypto.py  test_typo_db_access.py  typoDB.py  typo_db_access.py  typodb.cfg  usage_pw_pkcrypto.ipynb
archive/: debug_typtop.sh  pw_pkcrypto.py  pwcrypto.doc.md  test_pw_pkcrypto.py
archive/Cexes/: CMakeLists.txt  chkpw.c  chkpw_new  chkpw_new.c  fix_pw.c  pam_typopw.c  test_fix_pw.c  util.cpp
archive/myunix_chkpwd/: chkpw_orig  chkpw_orig.c  run_as_root.c
csrcs/: init.sh  run_as_root.c  run_proc.h
csrcs/linux/: Makefile  install.sh  pam_typtop.c  typtop-auth  uninstall.sh
csrcs/osx/: icon_typtop.icns  install_typtop.scpt  typtop.icns
csrcs/osx/pam_opendirectory/: Makefile  a.c  install.sh  pam_opendirectory_typo.c
csrcs/osx/prebuilt/: install.sh  run_as_root  uninstall.sh
linux/: Makefile  install.sh  pam_typtop.c  run_as_root.c  typtop-auth  uninstall.sh
linux/Linux-PAM-1.2.1-typtop/: ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
linux/Linux-PAM-1.2.1-typtop/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
linux/Linux-PAM-1.2.1-typtop/conf/: Makefile.in
linux/Linux-PAM-1.2.1-typtop/conf/pam_conv1/: Makefile.in
linux/Linux-PAM-1.2.1-typtop/doc/: Makefile.in
linux/Linux-PAM-1.2.1-typtop/doc/adg/: Makefile.in
linux/Linux-PAM-1.2.1-typtop/doc/man/: Makefile.in  PAM.8  misc_conv.3  pam.3  pam.conf.5  pam_acct_mgmt.3  pam_authenticate.3  pam_chauthtok.3  pam_close_session.3  pam_conv.3  pam_end.3  pam_error.3  pam_fail_delay.3  pam_get_authtok.3  pam_get_data.3  pam_get_item.3  pam_get_user.3  pam_getenv.3  pam_getenvlist.3  pam_info.3  pam_misc_drop_env.3  pam_misc_paste_env.3  pam_misc_setenv.3  pam_open_session.3  pam_prompt.3  pam_putenv.3  pam_set_data.3  pam_set_item.3  pam_setcred.3  pam_sm_acct_mgmt.3  pam_sm_authenticate.3  pam_sm_chauthtok.3  pam_sm_close_session.3  pam_sm_open_session.3  pam_sm_setcred.3  pam_start.3  pam_strerror.3  pam_syslog.3  pam_xauth_data.3
linux/Linux-PAM-1.2.1-typtop/doc/mwg/: Makefile.in
linux/Linux-PAM-1.2.1-typtop/doc/sag/: Makefile.in
linux/Linux-PAM-1.2.1-typtop/doc/specs/: Makefile.in
linux/Linux-PAM-1.2.1-typtop/examples/: Makefile.in
linux/Linux-PAM-1.2.1-typtop/libpam/: Makefile.in
linux/Linux-PAM-1.2.1-typtop/libpam_misc/: Makefile.in
linux/Linux-PAM-1.2.1-typtop/libpamc/: Makefile.in
linux/Linux-PAM-1.2.1-typtop/libpamc/test/: Makefile.in
linux/Linux-PAM-1.2.1-typtop/modules/: Makefile.in
linux/Linux-PAM-1.2.1-typtop/modules/pam_access/: Makefile.in  access.conf.5  pam_access.8
linux/Linux-PAM-1.2.1-typtop/modules/pam_cracklib/: Makefile.in  pam_cracklib.8
linux/Linux-PAM-1.2.1-typtop/modules/pam_debug/: Makefile.in  pam_debug.8
linux/Linux-PAM-1.2.1-typtop/modules/pam_deny/: Makefile.in  pam_deny.8
linux/Linux-PAM-1.2.1-typtop/modules/pam_echo/: Makefile.in  pam_echo.8
linux/Linux-PAM-1.2.1-typtop/modules/pam_env/: Makefile.in  pam_env.8  pam_env.conf.5
linux/Linux-PAM-1.2.1-typtop/modules/pam_exec/: Makefile.in  pam_exec.8
linux/Linux-PAM-1.2.1-typtop/modules/pam_faildelay/: Makefile.in  pam_faildelay.8
linux/Linux-PAM-1.2.1-typtop/modules/pam_filter/: Makefile.in  pam_filter.8
linux/Linux-PAM-1.2.1-typtop/modules/pam_ftp/: Makefile.in  pam_ftp.8
linux/Linux-PAM-1.2.1-typtop/modules/pam_group/: Makefile.in  group.conf.5  pam_group.8
linux/Linux-PAM-1.2.1-typtop/modules/pam_issue/: Makefile.in  pam_issue.8
linux/Linux-PAM-1.2.1-typtop/modules/pam_keyinit/: Makefile.in  pam_keyinit.8
linux/Linux-PAM-1.2.1-typtop/modules/pam_lastlog/: Makefile.in  pam_lastlog.8
linux/Linux-PAM-1.2.1-typtop/modules/pam_limits/: Makefile.in  limits.conf.5  pam_limits.8
linux/Linux-PAM-1.2.1-typtop/modules/pam_listfile/: Makefile.in  pam_listfile.8
linux/Linux-PAM-1.2.1-typtop/modules/pam_localuser/: Makefile.in  pam_localuser.8
linux/Linux-PAM-1.2.1-typtop/modules/pam_loginuid/: Makefile.in  pam_loginuid.8
linux/Linux-PAM-1.2.1-typtop/modules/pam_tally2/: README  (+2 more)
linux/Linux-PAM-1.2.1-typtop/tests/: Makefile.in
linux/Linux-PAM-1.2.1-typtop/xtests/: Makefile.in
linux/myunix_chkpwd/: Makefile  a.sh  call_unix_chkpwd.c  call_unix_chkpwd.py  chkpw.c  run_as_root
linux/unixchkpwd/: .gitignore  Makefile.am  bigcrypt.c  call_unix_chkpwd.py  config.h.in  configure.ac  passverify.c  unix_chkpwd.c
osx/: install_typtop.scpt
osx/pam_opendirectory/: Makefile  a.c  install.sh  pam_opendirectory_typo.c  run_as_root  typtops.c  uninstall.sh
osx/passwd.tproj/: CMakeLists.txt  Makefile  pam_opendirectory.c  pam_opendirectory_typo.c
pam_typtop/: __init__.py  config.py  dbutils.py  pw_pkcrypto.py  pw_pkcrypto2.py  pwcryptolib.py  typo_db_access.py
test/: test_pam.py  test_pw_pkcrypto.py  test_pw_pkcrypto2.py  test_typo_db_access.py
tests/: creat_mac_user.sh  create_linux_user.sh  test_dbaccess.py  test_pam.py  test_pw_pkcrypto2.py  test_uninstall.py  test_upload.py
typtop/: __init__.py  __main__.py  config.py  cryptography_pwpkcrypto.py  dbaccess.py  dbutils.py  pw_pkcrypto.py  pw_pkcrypto2.py  pw_pkcrypto2.py_cryptography  pycryptodome_pwpkcrypto.py  send_typo_log.py  typo_db_access.py  typodb.cfg  typtops.py  typtopscript.py  typtopserver.crt  validate_parent.py
(+60 files in other folders)
